2015-11-30  Natalia Portillo  <claunia@claunia.com>

	* FletcherContext.cs:
	  Disabled Fletcher as it is abnormally slow.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Checksums.csproj:
	  Upgrade .NET version to 4.0.

2015-10-18  Natalia Portillo  <claunia@claunia.com>

	* CDChecksums.cs:
	* ReedSolomon.cs:
	* DiscImageChef.Checksums.csproj:
	  Added specific console handling for standard, verbose, debug
	  and error outputs.

2015-10-05  Natalia Portillo  <claunia@claunia.com>

	* MD5Context.cs:
	* SHA1Context.cs:
	* ReedSolomon.cs:
	* CDChecksums.cs:
	* CRC64Context.cs:
	* CRC16Context.cs:
	* CRC32Context.cs:
	* SHA256Context.cs:
	* SHA512Context.cs:
	* SHA384Context.cs:
	* SpamSumContext.cs:
	* Adler32Context.cs:
	* FletcherContext.cs:
	* RIPEMD160Context.cs:
	* Properties/AssemblyInfo.cs:
	* DiscImageChef.Checksums.csproj:
	  Move checksums to a separate library.
